--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -1,19 +1,15 @@
 <!-- templates/layout.html -->
 <!doctype html>
 <html>
-<head>
-    <title>Job Board</title>
-    <link rel="" stylesheet
-    " href="{{url_for('static',
-    filename='css/bulma.min.css')}}">
-    <link rel="" stylesheet
-    " href="{{url_for('static',
-    filename='css/app.css')}}">
-    <link rel="" stylesheet
-    "
-    href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-</head>
-<head></head>
+  <head>
+      <title>Job Board</title>
+      <link rel="stylesheet" href="{{url_for('static',
+      filename='css/bulma.min.css')}}">
+      <link rel=stylesheet" href="{{url_for('static',
+      filename='css/app.css')}}">
+      <link rel=stylesheet"
+      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+  </head>
   <body>
     <div class="container top">
       <div class="content">
