--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -5,9 +5,9 @@
       <title>Job Board</title>
       <link rel="stylesheet" href="{{url_for('static',
       filename='css/bulma.min.css')}}">
-      <link rel=stylesheet" href="{{url_for('static',
+      <link rel="stylesheet" href="{{url_for('static',
       filename='css/app.css')}}">
-      <link rel=stylesheet"
+      <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
   </head>
   <body>
