--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -20,9 +20,10 @@
 
 
 {% macro show_job(job) %}
-<div class ="columns is-multiline">
+<div class="columns is-multiline">
     {% for job in jobs %}
     <div class=""column is-half">
         {{ show_job(job) }}
     </div>
 </div>
+{% endfor %}
