--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -25,5 +25,7 @@
     <div class=""column is-half">
         {{ show_job(job) }}
     </div>
+    {% endfor %}
 </div>
-{% endfor %}
+
+{% endmacro %}
