--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -1,4 +1,4 @@
-{% macro show_job(job) %}
+{% macro show_jobs(job) %}
 
 <div class="card adjust-height">
   <header class="card-header">
@@ -19,7 +19,7 @@
 {% endmacro %}
 
 
-{% macro show_job(job) %}
+{% macro show_jobs(job) %}
 <div class="columns is-multiline">
     {% for job in jobs %}
     <div class=""column is-half">
