--- a/jobs/templates/review.html
+++ b/jobs/templates/review.html
@@ -44,8 +44,7 @@
         <button class="button is-link">Submit</button>
       </div>
       <div class="control">
-        <a class="button is-text">Cancel</a>
-          <href class="{{url_for('employer', employer_id=employer_id)}}"></href>
+        <a href class="{{url_for('employer', employer_id=employer_id)}}"class="button is-text">Cancel</a>
       </div>
     </div>
   </form>
